--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react": "^18.3.2",
 		"@types/react-dom": "^18.3.0",
 		"@types/three": "^0.164.0",
+		"leva": "^0.9.35",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-scripts": "5.0.1",
